+ contenido a pg FAQ

--- a/faq.html
+++ b/faq.html
@@ -31,6 +31,32 @@
       <div>
         <h1 class="tituloPgFaq">Basic T's</h1>
       </div>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+          officia a blanditiis delectus dolor neque earum veniam qui quo fuga
+          aperiam saepe recusandae, veritatis odit repellendus facere error
+          libero corporis.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+          officia a blanditiis delectus dolor neque earum veniam qui quo fuga
+          aperiam saepe recusandae, veritatis odit repellendus facere error
+          libero corporis.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+          officia a blanditiis delectus dolor neque earum veniam qui quo fuga
+          aperiam saepe recusandae, veritatis odit repellendus facere error
+          libero corporis.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+          officia a blanditiis delectus dolor neque earum veniam qui quo fuga
+          aperiam saepe recusandae, veritatis odit repellendus facere error
+          libero corporis.
+        </p>
+      </section>
     </main>
     <footer class="footerGeneral">
       <div>
